<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@color/primary_background"
    android:fitsSystemWindows="true">

    <!--    User Details  -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:layout_marginTop="25sp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:gravity="top"
        android:background="@color/primary_background"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/profile_picture_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:padding="1dp"
            android:scaleType="centerCrop"
            android:cropToPadding="true"
            android:background="@color/card_background"
            android:contentDescription="Profile Picture" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:layout_marginStart="10sp"
            android:orientation="vertical">
            <!-- public username display -->
            <TextView
                android:id="@+id/public_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:gravity="start"
                android:textColor="@color/primary_text"
                android:textSize="25sp"
                android:singleLine="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:text="User Name" />

            <!-- Preferences button -->
            <Button
                android:id="@+id/preferences_button"
                android:layout_width="50sp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/public_username"
                android:background="@drawable/baseline_settings_24" />
        </RelativeLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginTop="10sp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="10sp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_controls_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="100dp" />

        <EditText
            android:id="@+id/biography_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="Enter biography here..."
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:textColorHint="@color/primary_text"
            android:gravity="start|top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/right_controls_start"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/edit_bio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:background="@drawable/ic_edit"
            android:backgroundTint="@color/primary_button"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/right_controls_start" />

        <LinearLayout
            android:id="@+id/bio_edit_button_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/right_controls_start"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10sp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/cancel_edit_bio_button"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:background="@drawable/cancel_button_background"
                android:src="@drawable/ic_close" />

            <ImageButton
                android:id="@+id/save_bio_button"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:background="@drawable/save_button_background"
                android:src="@drawable/ic_check" />
        </LinearLayout>

        <Button
            android:id="@+id/add_animal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="Post\nAnimal"
            android:textSize="15sp"
            android:textColor="@color/secondary_text"
            android:background="@drawable/button_style_primary"
            android:contentDescription="Add animal to a shelter profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- TabLayout for switching between Saved Animals and My Animals -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/secondary_text"
        android:background="@color/card_background">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liked_animals_tab_name" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adopting_animals_tab_name" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hosted_animals_tab_name" />
    </com.google.android.material.tabs.TabLayout>

    <!-- ViewPager2 to display fragments based on selected tab -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>